--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -6,3 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.back-color {
+  background-color: #fce3bb;
+}
